# ephemeral_vault

./: .env  README.md
ephemeral-vault/ephemeral-vault/: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md
ephemeral-vault/ephemeral-vault/.github/workflows/: ci.yml
ephemeral-vault/ephemeral-vault/anchor_program/: Cargo.toml
ephemeral-vault/ephemeral-vault/anchor_program/src/: lib.rs
ephemeral-vault/ephemeral-vault/api_server/src/: main.rs
ephemeral-vault/ephemeral-vault/backend/: Cargo.toml  config.toml
ephemeral-vault/ephemeral-vault/backend/src/: lib.rs  main.rs
ephemeral-vault/ephemeral-vault/backend/src/services/: delegation_manager.rs  deposit_calculator.rs  mod.rs  session_manager.rs  transaction_signer.rs  vault_monitor.rs
ephemeral-vault/ephemeral-vault/docker/: Dockerfile  docker-compose.yml
ephemeral-vault/ephemeral-vault/migrations/: 001_initial_schema.sql
ephemeral-vault/ephemeral-vault/programs/ephemeral-vault/: Cargo.toml
ephemeral-vault/ephemeral-vault/programs/ephemeral-vault/src/: lib.rs
ephemeral-vault/ephemeral-vault/scripts/: build.sh  deploy.sh  test.sh
ephemeral-vault/ephemeral-vault/tests/: anchor_tests.rs  backend_tests.rs  ephemeral_vault.js  integration_tests.rs  performance_test.rs  security_tests.rs
