[package]
name = "ephemeral-vault"
version = "0.1.0"
description = "Ephemeral vault system for gasless trading"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ephemeral_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
tokio = { version = "1.0", features = ["full"] }